// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CampaignWallChartV2 characterization > all-unassigned: no placements at all 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (2) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "12 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=12",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > default: structural skeleton 1`] = `
"<div>
  <div>
    <div>
    <p>
  <div>
    <div aria-hidden="true">
    <div data-wall-chart-toolbar="true">
      <div>
        <div>
          <div>
            <div>
              <div>
          <div>
            <div>
              <h2>
              <p>
            <div>
              <div>
              <div>
              <button aria-pressed="false">
              <div>
        <div>
          <div>
            <div aria-label="Rating distribution">
              <div>
              <div>
              <div>
              <div>
              <div>
            <div>
              <span>
              <span>
              <span>
            <div>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
            <div>
              <span>
            <div>
              <span>
              <span>
              <span>
    <div>
      <div>
        <div>
          <div>
            <div data-ou-id="11">
              <div>
            <div data-ou-id="12">
              <div>
            <div data-ou-id="unassigned">
              <div>
      <div>
        <div>
          <div>
            <div>
            <div>
              <div>
              <button aria-label="Expand assessment distribution">
          <div>
            <div>
              <h4>
              <div>
    <button>"
`;

exports[`CampaignWallChartV2 characterization > default: writable, hints dismissed, no query string (first group) 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (2) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=50%",
        "Em=0%",
        "Lead=1:2",
        "Members=50%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 3: 1 (50%) | Unrated: 1 (50%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "8 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=75%",
        "Em=50%",
        "Lead=1:8",
        "Members=75%",
        "OA Members=63%",
        "Delegates=13%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=13%",
        "Bargaining reps=13%",
        "MUA=1",
        "Avg rating=3.3",
        "Participation (supportive)=13%",
        "Workers=8",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (13%) | Rating 3: 1 (13%) | Rating 4–5: 2 (25%) | Unrated: 4 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=3",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:3",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > hidden-unit: one unit hidden by the stored prefs document 1`] = `
{
  "a11y": [
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme South",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Cara Carter:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (1/2) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=50%",
        "Em=0%",
        "Lead=1:2",
        "Members=50%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 3: 1 (50%) | Unrated: 1 (50%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "8 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=75%",
        "Em=50%",
        "Lead=1:8",
        "Members=75%",
        "OA Members=63%",
        "Delegates=13%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=13%",
        "Bargaining reps=13%",
        "MUA=1",
        "Avg rating=3.3",
        "Participation (supportive)=13%",
        "Workers=8",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (13%) | Rating 3: 1 (13%) | Rating 4–5: 2 (25%) | Unrated: 4 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=2",
    "top-level-units=2",
    "tiles=10",
    "placeholders=1",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:2",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > hint-visible: group-selector hint not yet dismissed 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:visible dismiss=[Got it]",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (2) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=50%",
        "Em=0%",
        "Lead=1:2",
        "Members=50%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 3: 1 (50%) | Unrated: 1 (50%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "8 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=75%",
        "Em=50%",
        "Lead=1:8",
        "Members=75%",
        "OA Members=63%",
        "Delegates=13%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=13%",
        "Bargaining reps=13%",
        "MUA=1",
        "Avg rating=3.3",
        "Participation (supportive)=13%",
        "Workers=8",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (13%) | Rating 3: 1 (13%) | Rating 4–5: 2 (25%) | Unrated: 4 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=3",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:3",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > no-groups: the whole membership as one flat grid 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Not in any group",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Not in any group",
    "Show empty units",
    "Union member (other union)",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked | disabled",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "New unit",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Not in any group | pressed=false",
      ],
      "header": "12 named",
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Not in any group",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=12",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > not-in-any-group: ?group=none 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "No email. Open worker details, focus email.",
    "Not in any group",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Not in any group",
    "Show empty units",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked | disabled",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "New unit",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Not in any group | pressed=false",
      ],
      "header": "2 named",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=50%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=50%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=50%",
        "Avg rating=2.0",
        "Participation (supportive)=50%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (50%) | Rating 3: 1 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Not in any group",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=2",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > read-only: canWrite false 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email.",
    "No phone.",
    "Petition ask",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "email on file.",
    "phone on file.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Units (2) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South | pressed=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=50%",
        "Em=0%",
        "Lead=1:2",
        "Members=50%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 3: 1 (50%) | Unrated: 1 (50%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "8 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=75%",
        "Em=50%",
        "Lead=1:8",
        "Members=75%",
        "OA Members=63%",
        "Delegates=13%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=13%",
        "Bargaining reps=13%",
        "MUA=1",
        "Avg rating=3.3",
        "Participation (supportive)=13%",
        "Workers=8",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (13%) | Rating 3: 1 (13%) | Rating 4–5: 2 (25%) | Unrated: 4 (50%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "HSR",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "MUA",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —.",
          "worker": "111 Kim King",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=3",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:3",
    "charts",
    "dialogs:none",
  ],
}
`;
